fix: overflow

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -105,7 +105,8 @@ header {
     /* margin-top: 150px; */
     display: flex;
     gap: 20px;
-    overflow: auto;
+    overflow: hidden;
+    overflow-x: auto;
     margin: 20px 0;
 }
 
@@ -116,6 +117,13 @@ header {
     border-radius: 50px;
     padding: 15px;
     font-size: 16px;
+}
+
+.category-button:hover {
+    text-decoration: underline;
+    transition: 0.3s;
+    font-weight: 500;
+    transform: scale(1.05);
 }
 
 .active {
@@ -319,6 +327,7 @@ header {
     #category-list {
         margin-top: 50px;
         width: fit-content;
+        overflow: visible;
     }
 
     #main-content {
